--- a/src/components/Cards/Cards.module.scss
+++ b/src/components/Cards/Cards.module.scss
@@ -3,10 +3,10 @@ $color-recovered: #239723;
 $color-deadths: #121212;
 
 .CardsWrapper {
-  margin: 30px 0;
+  margin: 42px 0;
 
   .card {
-    margin: 0 2%;
+    margin: 10px 2%;
 
     &.infected,
     &.recovered,
